first prototype of topological sorting

--- a/Parallel_job_scheduling/Parallel_job_scheduling.vcxproj
+++ b/Parallel_job_scheduling/Parallel_job_scheduling.vcxproj
@@ -164,8 +164,10 @@
     </QtMoc>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Graph.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Parallel_job_scheduling.cpp" />
+    <ClCompile Include="Scheduler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Parallel_job_scheduling.h" />
@@ -175,6 +177,12 @@
   </ItemGroup>
   <ItemGroup>
     <QtRcc Include="Parallel_job_scheduling.qrc" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Edge.h" />
+    <ClInclude Include="Graph.h" />
+    <ClInclude Include="Process.h" />
+    <ClInclude Include="Scheduler.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
