--- a/Parallel_job_scheduling/Parallel_job_scheduling.vcxproj
+++ b/Parallel_job_scheduling/Parallel_job_scheduling.vcxproj
@@ -184,6 +184,10 @@
     <ClInclude Include="Process.h" />
     <ClInclude Include="Scheduler.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="input0.txt" />
+    <Text Include="input1.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
