--- a/Parallel_job_scheduling/Parallel_job_scheduling.vcxproj.filters
+++ b/Parallel_job_scheduling/Parallel_job_scheduling.vcxproj.filters
@@ -72,4 +72,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="input0.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="input1.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
