--- a/Parallel_job_scheduling/Parallel_job_scheduling.vcxproj.filters
+++ b/Parallel_job_scheduling/Parallel_job_scheduling.vcxproj.filters
@@ -79,5 +79,8 @@
     <Text Include="input1.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="input2.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
