--- a/Parallel_job_scheduling/Parallel_job_scheduling.vcxproj
+++ b/Parallel_job_scheduling/Parallel_job_scheduling.vcxproj
@@ -187,6 +187,7 @@
   <ItemGroup>
     <Text Include="input0.txt" />
     <Text Include="input1.txt" />
+    <Text Include="input2.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
