--- a/Parallel_job_scheduling/Parallel_job_scheduling.vcxproj.filters
+++ b/Parallel_job_scheduling/Parallel_job_scheduling.vcxproj.filters
@@ -62,9 +62,6 @@
     <ClInclude Include="Graph.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Edge.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Scheduler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -80,6 +77,15 @@
       <Filter>Resource Files</Filter>
     </Text>
     <Text Include="input2.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="expected0.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="expected1.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="expected2.txt">
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
