--- a/Parallel_job_scheduling_/Parallel_job_scheduling_.vcxproj.filters
+++ b/Parallel_job_scheduling_/Parallel_job_scheduling_.vcxproj.filters
@@ -27,4 +27,24 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="input0.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="input1.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="input2.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="expected0.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="expected1.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="expected2.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
