--- a/Parallel_job_scheduling_/Parallel_job_scheduling_.vcxproj.filters
+++ b/Parallel_job_scheduling_/Parallel_job_scheduling_.vcxproj.filters
@@ -46,5 +46,8 @@
     <Text Include="expected2.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="input3.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
