--- a/Parallel_job_scheduling_/Parallel_job_scheduling_.vcxproj.filters
+++ b/Parallel_job_scheduling_/Parallel_job_scheduling_.vcxproj.filters
@@ -49,5 +49,8 @@
     <Text Include="input3.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="expected3.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
